--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" content="width=device-width, initial-scale=1" name="viewport" />
-    <script src="../p5/p5.min.js"></script>
-    <script src="../p5/addons/p5.sound.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" href="https://use.typekit.net/lkh8jvi.css">
@@ -37,7 +36,9 @@
         <div class="buttonsAndToggles">
           <button id="move">Move</button>
           <button id="edit">Edit</button>
-          <button id="animate">Animate</button>
+          <button id="animate">Animate
+            <div id="animatewarning">Warning: animation will change positions of all collage elements. Do not press before saving!</div>
+          </button>
           <button id="remove">Remove</button>
           <button id="clear">Clear</button>
           <button id="save">Save</button>
@@ -120,7 +121,7 @@
 
                 <form enctype="multipart/form-data" name="uploadform" id="uploadform" class="bgbutton">
 
-                  Your image: <input type="file" id="filename" name="filename">
+                  Your image:<br>(a square image is recommended) <input type="file" id="filename" name="filename">
                   <br>
                   <button id="uploadbg">upload file</button>
                   <div id="results"></div>
