adding images and title

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" href="https://use.typekit.net/lkh8jvi.css">
+    <title>mash up like the masters</title>
 
   </head>
 
   <body>
-  <h1 class="mobile_text">Sorry, Mash-up like the masters is not supported on a mobile device :(</h1>
+  <h1 class="mobile_text">Sorry, Mash up like the masters is not supported on a mobile device :(</h1>
 
   <div class="desktop">
     <div class="popupoverlay nodisplay">
@@ -18,7 +19,7 @@
 
     <header>
       <div>
-        <h1 class="main_title">Mash-up like the masters</h1>
+        <h1 class="main_title">Mash up like the masters</h1>
         <p class="instructions">Compare, contrast, juxtapose, and see how collisions of different styles and ideas give birth to new ways of seeing and approaches, to both a master’s artwork and your own creative process.
           Choose an artist from a dropdown menu and click anywhere on the canvas to use pieces of their famous art for your collage!
         </p>
